feat: styling, /paste and /pages routes

--- a/templates/not-found.html.hbs
+++ b/templates/not-found.html.hbs
@@ -1,5 +1,6 @@
 {{#*inline "page"}}
 <h1>404 Not Found</h1>
+{{> layouts/nav }}
 <p>The page "<span></span>" doesn't exist just yet.</p>
 <p>Maybe you want to head <a href="/">home</a>?</p>
 <script>
