--- a/templates/paste/index.html.hbs
+++ b/templates/paste/index.html.hbs
@@ -1,6 +1,5 @@
 {{#*inline "page"}}
-<h1>index :: home</h1>
+<h1>index :: paste</h1>
 {{> layouts/nav }}
-{{ index }}
 {{/inline}}
 {{~> (parent)~}}
