feat: functioning page index

--- a/static/sheets/index.css
+++ b/static/sheets/index.css
@@ -20,6 +20,7 @@
     --transition-duration: 150ms;
 }
 body {
+    max-width: 800px;
     margin: 0 auto;
     padding: 10px;
     background: var(--primary);
