--- a/templates/pages/index.html.hbs
+++ b/templates/pages/index.html.hbs
@@ -1,6 +1,7 @@
 {{#*inline "page"}}
 <h1>index :: pages</h1>
 {{> layouts/nav }}
+{{> layouts/page-nav }}
 <form action="/new/page" method="POST">
     <textarea placeholder="MarkDown..." name="data"></textarea>
     <input type="text" placeholder="URL" name="new_url" />
